# skillir

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapter-sdk.md  safety.md  skill-commons.md  spec.md
examples/: adapter-manifest.json
packs/agriculture-food/skills/produce-sort/: skill.md
packs/construction/skills/material-staging/: skill.md
packs/facilities/skills/surface-wipe/: skill.md
packs/facilities/skills/waste-bin-service/: skill.md
packs/foundational/skills/fixture-load/: skill.md
packs/foundational/skills/fixture-unload/: skill.md
packs/foundational/skills/item-count-check/: skill.md
packs/foundational/skills/object-inspection/: skill.md
packs/foundational/skills/operator-confirmed-handoff/: skill.md
packs/foundational/skills/order-picking/: skill.md
packs/foundational/skills/pick-and-place/: skill.md
packs/foundational/skills/point-to-point-delivery/: skill.md
packs/foundational/skills/shelf-replenishment/: skill.md
packs/foundational/skills/sort-and-quarantine/: skill.md
packs/foundational/skills/tote-consolidation/: skill.md
packs/foundational/skills/tote-transfer/: skill.md
packs/foundational/skills/workspace-clearance-check/: skill.md
packs/household-service/skills/inventory-bin-sort/: skill.md
packs/inspection/skills/indicator-read-and-record/: skill.md
packs/logistics/skills/case-packing/: skill.md
packs/maintenance/skills/asset-condition-survey/: skill.md
packs/maintenance/skills/tool-delivery/: skill.md
packs/manufacturing/skills/component-kitting/: skill.md
packs/service/skills/tray-delivery/: skill.md
restricted/: intimate-contact.schema.json
schemas/: adapter-manifest.v1alpha1.schema.json  catalog.v1alpha1.schema.json  skill-ir.v1alpha1.schema.json
scripts/: check_neutrality.py  check_wheel.py
src/skillir/: __init__.py  cli.py  core.py  frontmatter.py  skilldoc.py
src/skillir/resources/: catalog.json  taxonomy.json
src/skillir/resources/primitives/: core.json
src/skillir/resources/profiles/: profiles.json
tests/: test_skillir.py
