[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "skillir"
version = "0.1.0"
description = "Offline-first compiler and evidence framework for physical robot skills."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Skill IR Contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
pdf = ["docling>=2.0,<3"]
ocr = ["ocrmypdf>=17.0,<18", "pypdfium2>=4,<5"]
draft = ["httpx>=0.28,<1"]
dev = ["pytest>=8,<9"]

[project.scripts]
skillir = "skillir.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillir"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
